--- a/frontend_safe/package.json
+++ b/frontend_safe/package.json
@@ -17,6 +17,10 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "peerDependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
